fix: add pre-wrap for code blocks in tables

--- a/src/app/blog/blog-content/blog-content.component.scss
+++ b/src/app/blog/blog-content/blog-content.component.scss
@@ -43,6 +43,7 @@ table > tbody td {
 
     > code {
       background: none;
+      white-space: pre-wrap;
     }
   }
 }
